packages/amplication-client/src/Resource/create-resource/CreateServiceWizard.scss
@use "sass:math";
@import "../../style/index.scss";

$max-width: 700px;

.create-service-wizard {
  display: flex;
  height: 100%;
  flex-direction: column;

  &__splitWrapper {
    display: flex;
    height: 100%;
  }

  &__left {
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background: var(--black2);
  }

  &__right {
    flex: 1;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  &__description {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 66%;
    gap: 24px;

    .circle-badge i {
      color: var(--black5);
    }
  }

  h2 {
    @include title-24;
  }

  h3 {
    @include title-14;
    text-align: center;
  }

  &__footer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 16px;
    height: 26px;
    background: var(--black10);
  }

  .amp-button--clear[disabled] {
    color: var(--black40);
    border: 1px solid var(--black40);
    padding: 5px 6px;
    height: 28px;
    left: 16px;
  }
  .amp-icon--size-small {
    font-size: 12px;
  }
  .amp-button--primary {
    right: 16px;
    height: 28px;
  }

  &__processing {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    max-width: $max-width;
    margin: auto;

    &__title {
      @include headline1;
      text-align: center;
      padding: 0 var(--default-spacing);
    }

    &__message {
      @include sectionTitle;
      color: var(--black80);
      margin-top: var(--double-spacing);
    }

    &__tagline {
      @include body2;
      color: var(--black100);
      max-width: $max-width;
      text-align: center;
      max-width: math.div($max-width, 1.5);
    }

    .svg-theme-image {
      width: 200px;
      height: 200px;
      margin: 50px;
    }
    &__loader {
      display: flex;
      align-items: center;
      justify-content: center;
      width: 100%;
      margin-bottom: var(--double-spacing);
    }
  }
}

